Wed Apr 14 15:06:32 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_ArtifactInstallation.idl:
        * DAnCE/DAnCE/DAnCE_Core.mpc:
        * DAnCE/DAnCE/DAnCE_DeploymentInterceptors.idl:
        * DAnCE/DAnCE/DAnCE_LocalityManager.idl:
        * DAnCE/Deployment/Deployment_Application.idl:
        * DAnCE/Deployment/Deployment_ApplicationManager.idl:
        * DAnCE/Deployment/Deployment_Core.mpc:
        * DAnCE/Deployment/Deployment_InvalidComponentExecParameter.idl:
        * DAnCE/Deployment/Deployment_InvalidConnection.idl:
        * DAnCE/Deployment/Deployment_InvalidNodeExecParameter.idl:
        * DAnCE/Deployment/Deployment_InvalidProperty.idl:
        * DAnCE/Deployment/Deployment_ResourceNotAvailable.idl:
        * DAnCE/LocalityManager:

          Integrated new IDL.

        * DAnCE/DAnCE/DAnCE_Properties.mpc:
        * DAnCE/Deployment/DAnCE_Core.mpc:

          Removed these files.


Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: